--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bitandbang",
+  "name": "ahmedelgabri",
   "version": "1.1.0",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "description": "A personal card for Ahmed El Gabri (@ahmedelgabri)",
   "main": "index.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "ahmedelgabri": "./bin/card.js"
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
+  "author": "Ahmed El Gabri <ahmed@gabri.me> (https://gabri.me)",
   "license": "MIT",
   "dependencies": {
     "boxen": "^2.1.0",
