--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "ahmedelgabri": "./bin/card.js"
   },
   "scripts": {
-    "start": "node ./bin/card.js",
-    "lint": "standard"
+    "prepublish": "npm run build",
+    "build": "node build.js",
+    "dev": "npm run build && node ./bin/card.js",
+    "lint": "standard",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "card",
