--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "prepublish": "npm run build",
     "build": "node build.js",
     "dev": "npm run build && node ./bin/card.js",
-    "lint": "standard",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "standard"
   },
   "keywords": [
     "card",
@@ -38,7 +37,7 @@
   "dependencies": {},
   "devDependencies": {
     "boxen": "^4.2.0",
-    "chalk": "^3.0.0",
-    "standard": "^14.3.1"
+    "chalk": "^4.0.0",
+    "standard": "^14.3.4"
   }
 }
