export cjs & esm

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A personal card for Ahmed El Gabri (@ahmedelgabri)",
   "license": "MIT",
   "homepage": "https://gabri.me",
-  "main": "index.js",
+  "main": "index.cjs.js",
+  "browser": "index.js",
   "bin": {
     "ahmedelgabri": "./bin/card.js"
   },
@@ -26,7 +27,8 @@
   "files": [
     "bin/card.js",
     "bin/output",
-    "index.js"
+    "index.js",
+    "index.cjs.js"
   ],
   "repository": {
     "type": "git",
