--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ahmedelgabri",
   "author": "Ahmed El Gabri <ahmed@gabri.me> (https://gabri.me)",
-  "version": "4.0.0-3",
+  "version": "4.0.0",
   "description": "A personal card for Ahmed El Gabri (@ahmedelgabri)",
   "license": "MIT",
   "homepage": "https://gabri.me",
