--- a/deno.json
+++ b/deno.json
@@ -1,20 +1,25 @@
 {
-	"exports": "./mod.ts",
-	"version": "7.0.0",
-	"name": "@ahmed/card",
-	"imports": {
-		"@deno/dnt": "jsr:@deno/dnt@^0.41.1",
-		"@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.10.3",
-		"@std/assert": "jsr:@std/assert@^0.221.0",
-		"@std/fmt": "jsr:@std/fmt@^0.221.0",
-		"@std/path": "jsr:@std/path@^0.221.0",
-		"@std/semver": "jsr:@std/semver@^0.221.0"
-	},
-	"tasks": {
-		"dev": "deno run --allow-env --watch mod.ts",
-		"build": "deno run -A scripts/build.ts",
-		"publish": "deno run -A scripts/publish.ts",
-		"publish:npm": "cd npm && npm publish"
-	},
-	"exclude": ["npm", ".direnv", ".envrc", "shell.nix"]
+  "exports": "./mod.ts",
+  "version": "8.0.0",
+  "name": "@ahmed/card",
+  "imports": {
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.1",
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.10.3",
+    "@std/assert": "jsr:@std/assert@^0.221.0",
+    "@std/fmt": "jsr:@std/fmt@^0.221.0",
+    "@std/path": "jsr:@std/path@^0.221.0",
+    "@std/semver": "jsr:@std/semver@^0.221.0"
+  },
+  "tasks": {
+    "dev": "deno run --allow-env --watch mod.ts",
+    "build": "deno run -A scripts/build.ts",
+    "publish": "deno run -A scripts/publish.ts",
+    "publish:npm": "cd npm && npm publish"
+  },
+  "exclude": [
+    "npm",
+    ".direnv",
+    ".envrc",
+    "shell.nix"
+  ]
 }
